styles.css
body {
    background-color: antiquewhite;
    font-family: sans-serif;
    color: black;
}

a {
    color: blue;
}
    
body > h1,
body > p,
body > nav {
    padding: 0 1rem;
}

section {
    background-color: white;
    border-radius: 1em;
    padding: 1.5em;
    box-shadow: 0 0.2em 1em black;
    margin: 2em 1.5em;
}

details {
    border: 1px solid #bbb;
    border-radius: 1em;
    padding: 1em;
    margin: 1em 0;

    & p:last-child { margin-bottom: 0; }
}

h2 {
    margin-top: 0;
}

label {
    display: flex;
    justify-content: stretch;
    gap: 0.5em;

    & span {
        flex: 0 1 10em;
        order: 2;
    }
    & input {
        font-family: monospace;
        font-size: inherit;
        flex: 1 0 10em;
        order: 3;
    }
    & input[type=checkbox] {
        flex: 0 0 auto;
        order: 1;
    }
    margin-bottom: 0.5em;
}

image-getter {
    & img {
        display: none;
    }

    & canvas {
        max-width: 100%;
        max-height: 10em;
    }
}

#depth-curve {
    display: grid;
    grid-template-columns: 1fr 100px 100px 1fr;
    grid-template-rows: auto auto;

    & #black-depth-container {
        grid-row: 1 / 2;
        grid-column: 1 / 2;
        text-align: right;
    }

    & canvas {
        grid-row: 1 / 2;
        grid-column: 2 / 4;
    }

    & #white-depth-container {
        grid-row: 1 / 2;
        grid-column: 4 / 5;
    }

    & #black-label {
        grid-row: 2 / 3;
        grid-column: 1 / 3;
        text-align: right;
        padding-right: 1em;
    }

    & #white-label {
        grid-row: 2 / 3;
        grid-column: 3 / 5;
        padding-left: 1em;
    }

    input {
        height: 100%;
    }
}

fieldset {
    border: 0;
    padding: 0;

    & legend {
        position: absolute;
        left: -1000vmax;
    }
}

#output {
    max-width: 100%;
    max-height: 80svh;
}

nav {
    display: flex;
    gap: 2em;
}

